Liberado la traducción de LOM

--- a/translations/lordofmagna/descargas.html
+++ b/translations/lordofmagna/descargas.html
@@ -60,12 +60,20 @@ window.cookieconsent.initialise({
 			<img onload="this.style.opacity='1';" src="../../images/DescargaLOM.png">
 			<div class="download-header">Traducción juego completo Lord Of Magna: Maiden Heaven</div>
 				<div class="download-container">
-					<div class="download-version">Juego completo V1</div>
+					<div class="download-version">Juego completo V1 - Parcheador Windows</div>
 					<div class="download-buttons">
-						<a href="#"><div class="mega">Mega</div></a>
-						<a href="#"><div class="mediafire">Mediafire</div></a>
-						<a href="#"><div class="Drive">Drive</div></a>
-						<a href="#"><div class="github">Github</div></a>
+						<a href="https://github.com/Glowtranslations/LordOfMagnaMaidenHeavenESP/releases/download/1.0/Lord.Of.Magna.Maiden.Heaven.espanol.1.0.-.Windows.-.GlowTranslations.7z"><div class="github">Github</div></a>
+						<a href="https://mega.nz/#!pmpFyYBK!tYlsgAp-QKnjJYSZncfiZZ1etnOWee6eCekbddkwNSc"><div class="mega">Mega</div></a>
+						<a href="http://www.mediafire.com/file/mq0amnd68m9wrl6/Lord%20Of%20Magna%20Maiden%20Heaven%20espa%F1ol%201.0%20-%20Windows%20-%20GlowTranslations.7z"><div class="mediafire">Mediafire</div></a>
+						<a href="https://drive.google.com/open?id=10o7i0tkVnFKFXOEbBVuhPlih4YeAzBPL"><div class="Drive">Drive</div></a>
+					</div>
+					<div class="download-changelog">- Versión inicial</div>
+					<div class="download-version">Juego completo V1 - Parcheador Linux</div>
+					<div class="download-buttons">
+						<a href="https://github.com/Glowtranslations/LordOfMagnaMaidenHeavenESP/releases/download/1.0/Lord.Of.Magna.Maiden.Heaven.espanol.1.0.-.Linux.-.GlowTranslations.7z"><div class="github">Github</div></a>
+						<a href="https://mega.nz/#!5rABQQoC!wwNfTK34yxjh8fLhpJNB-6Z3o38Fo40jvYUe1nkqclA"><div class="mega">Mega</div></a>
+						<a href="http://www.mediafire.com/file/r9pom9h61vdjvzs/Lord%20Of%20Magna%20Maiden%20Heaven%20espa%F1ol%201.0%20-%20Linux%20-%20GlowTranslations.7z"><div class="mediafire">Mediafire</div></a>
+						<a href="https://drive.google.com/open?id=1Wa7A863BWTsfu0zN8UpgUn8hjUIjB26a"><div class="Drive">Drive</div></a>
 					</div>
 					<div class="download-changelog">- Versión inicial</div>
 				</div>
@@ -73,13 +81,13 @@ window.cookieconsent.initialise({
 				<div class="download-container">
 					<div class="download-version">Tema personalizado para 3DS</div>
 					<div class="download-buttons">
-						<a href="#"><div class="mediafire">Themeplaza</div></a>
-						<a href="#"><div class="Drive">Drive</div></a>
+						<a href="https://themeplaza.eu/item/6065"><div class="mediafire">Themeplaza</div></a>
+						<a href="https://drive.google.com/open?id=1scOLsC1Y7xeZ60MURAXcj1C6M3jwIctZ"><div class="Drive">Drive</div></a>
 					</div>
 					<div class="download-changelog">- Tema de Lord of Magna: Maiden Heaven para 3DS, se aplica con <a href="https://gbatemp.net/threads/release-anemone3ds-a-complete-theme-and-splash-manager-for-your-3ds.482804/">Anemone</a></div>
 				</div>
 				<div class="download-container">
-					<div class="download-version">Guía para Lord Of Magna: Maiden Heaven</div>
+					<div class="download-version">Guía para Lord Of Magna: Maiden Heaven (Próximamente)</div>
 					<div class="download-buttons">
 						<a href="#"><div class="github">Github</div></a>
 						<a href="#"><div class="Drive">Drive</div></a>
