--- a/translations/lordofmagna/miembros.html
+++ b/translations/lordofmagna/miembros.html
@@ -57,7 +57,7 @@ window.cookieconsent.initialise({
 		<div class="content-container">
 			<div class="content-title">Miembros de la traducción</div>
 			<div class="content">
-				Aquí están todos aquellos que están llevando un papel importante en la traducción de Lord of Magna: Maiden Heaven al español.
+				Aquí están todos aquellos que han llevndo un papel importante en la traducción de Lord of Magna: Maiden Heaven al español.
 				<div class="title"><h1>Líderes del proyecto</h1></div>
 				<div class="credits-container"> 
 					<div class="credits-name">Darkmet98</div>
@@ -232,6 +232,22 @@ window.cookieconsent.initialise({
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Sonicus.png" style="width: 100px; height: 100px;">
 					</div>
+				</div>
+				<div style="clear: both;"></div>
+				<div class="title"><h1>Agradecimientos</h1></div>
+				<div class="credits-container"> 
+					<div class="credits-name">Shiryu</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/shiryu.jpg" style="width: 100px; height: 100px;">
+					</div>
+					<div class="credits-desc">Por las sources del parcheador Windows.</div>
+				</div>
+				<div class="credits-container"> 
+					<div class="credits-name">TraduSquare</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/tradusquare.png" style="width: 100px; height: 100px;">
+					</div>
+					<div class="credits-desc">Por el apoyo y consejos que nos ha dado a lo largo de la traducción</div>
 				</div>
 				<div style="clear: both;"></div>
 			</div>
