--- a/translations/lordofmagna/progresos.html
+++ b/translations/lordofmagna/progresos.html
@@ -67,9 +67,9 @@ window.cookieconsent.initialise({
 				<tr>
 				<td class='title'>Sección</td><td class='title'>Traducido</td><td class='title'>Corregido</td><td class='title'>Testeado</td>
 				</tr>
-				<tr><td>Historia</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='wip'>90%</td></tr>
-				<tr><td>Conversaciones</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='wip'>80%</td></tr>
-				<tr><td>Relaciones</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='wip'>95%</td></tr>
+				<tr><td>Historia</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='yes'>100%</td></tr>
+				<tr><td>Conversaciones</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='yes'>100%</td></tr>
+				<tr><td>Relaciones</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='yes'>100%</td></tr>
 				<tr><td>Objetos</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='yes'>100%</td></tr>
 				<tr><td>Localizaciones</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='yes'>100%</td></tr>
 				<tr><td>Habilidades y magias</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='yes'>100%</td></tr>
