Añadidos unos detalles

--- a/translations/lordofmagna/informacion.html
+++ b/translations/lordofmagna/informacion.html
@@ -61,12 +61,17 @@ window.cookieconsent.initialise({
     Habiendo comenzado ya con la traducción de Rune Factory 4, nos ponemos manos a la obra con otro juego, que es más corto, pero igual de entretenido:  <br>
     Lord of Magna: Maiden Heaven, otro titulazo de la mano de Yoshifumi Hashimoto (otros títulos suyos son Rune Factory 4 y Story of seasons).<br><br>
     ¡Ya lo tenemos todo listo para empezar! Eso sí, le dedicaremos menos tiempo que al Rune Factory 4, ya que es un proyecto secundario.
-    <div class="title"><h1>¿Habrá Demo como en el Stella Glow?</h1></div>
-    Al parecer, alguien del equipo de desarrollo de Lord of Magna decidió que no hacía falta una demostración del juego. Una pena, la verdad. Por desgracia, no hacemos milagros, por lo que no podemos hacer un parche para una demo que no existe.<br>
-    <div class="title"><h1>¿Cuánto durará la traducción?</h1></div>
-    El otro día llamamos al servicio técnico de nuestra bola de cristal; la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra. Así pues, solo podemos decir que la traducción estará tan pronto como la terminemos: tres meses, un año, una década… No lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude, antes estará :P<br>
-    <br>Aun así, si tanto te gusta el juego, puedes seguirnos en nuestra cuenta de <a href="https://www.twitter.com/glowtranslate">Twitter</a>.<br>
-   	<div class="title"><h1>¿Dónde puedo adquirir el juego?</h1></div>
+	<div class="title"><h1>¿Cómo aplico el parche?</h1></div>
+	Hay 4 métodos para parchear el juego: Luma, NTR, 3DS y CIA.<br>
+	Dependiendo de cuál elijas, tendrás que hacer un procedimiento u otro.<br>
+	Toda la información que necesitáis se encuentra en el PDF que contiene el parche.
+	<div class="title"><h1>He encontrado un error, ¿cómo puedo reportarlo?</h1></div>
+	Hemos creado un repositorio en nuestro github para este tipo de cosas y más.<br>
+	El repositorio de github se encuentra <a href="https://github.com/Glowtranslations/LordOfMagnaMaidenHeavenESP">aquí</a>.<br>
+	Sigue las instrucciones del readme que hay para poder reportar el error.
+	<div class="title"><h1>El parcheador no funciona, ¿qué pasa?</h1></div>
+	Hemos añadido un nuevo apartado en el Github de Lord Of Magna Maiden Heaven para este tipo de casos. Se encuentra <a href="https://github.com/Glowtranslations/LordOfMagnaMaidenHeavenESP#faq-de-errores-sobre-el-parcheador">aquí</a>.<br>
+	Si encuentras un error que no aparece en el F.A.Q., avísanos desde el apartado de <a href="https://github.com/Glowtranslations/LordOfMagnaMaidenHeavenESP/issues">"Issues"</a> y te respondemos lo antes posible.
 	El juego lo puedes adquirir de manera digital o en físico.
 		<ul>
 			<li><a href="https://www.amazon.com/Lord-Magna-Maiden-Heaven-Nintendo-3DS/dp/B00TKLFEVA/">Amazon USA (Físico)</a>
