Actualizado el meta

--- a/translations/stellaglow/creditos.html
+++ b/translations/stellaglow/creditos.html
@@ -13,11 +13,11 @@
 	<meta property="og:image" content="http://glowtranslations.tk/images/metastella.jpg"/>
 	<title>GlowTranslations - Stella Glow - Créditos</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png?v=E6jLbRYamd">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png?v=E6jLbRYamd">
     <link rel="icon" type="image/png" sizes="192x192" href="../../android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../../favicon-16x16.png">
-    <link rel="manifest" href="../../manifest.json">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../favicon-16x16.png?v=E6jLbRYamd">
+    <link rel="manifest" href="../../site.webmanifest?v=E6jLbRYamd">
     <meta name="msapplication-TileColor" content="#00aba9">
     <meta name="msapplication-TileImage" content="../../mstile-144x144.png">
     <meta name="theme-color" content="#897E78">
