Actualizado la lista de amigos

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ window.cookieconsent.initialise({
 				<a href="http://transcene.net/"><img style="margin-top: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/transcene.png"></a>
 				<a href="http://hotayeldi-traducciones.blogspot.com.es/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/artema.png"></a>
 				<a href="http://tiovictor.romhackhispano.org/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/tiovictor.png"></a>
-				<a href="https://www.gradienwords.es/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/gradien.png"></a>
+				<a href="http://www.gradienwords.tk/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/gradien.png"></a>
                 <a href="http://traduccionesxt.blogspot.com.es/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/tradusXT.png"></a>
 				<a href="https://crimsontranslations.weebly.com/"><img style="margin-top: 10px; margin-bottom: 10px;" onload="this.style.opacity='1';" width="240px" height="78px" src="images/friends/crimson.png"></a>
 			</div>
