Fixeado algunos metadatos, optimizada un poco la web y actualizado los miembros

--- a/translations/stellaglow/creditos.html
+++ b/translations/stellaglow/creditos.html
@@ -24,7 +24,7 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="keywords" content="GlowTranslations, glowtranslations, Stella Glow, Rune Factory, Lord of Magna, persona 4, Traducciones, Scene, 3DS, PS2">
-	<meta name="description" content="Pagina oficial de Glow translations, traducciones FAN de juegos.">
+	<meta name="description" content="Créditos sobre la traducción de Stella Glow.">
 	<meta name="author" content="Glowtranslations">
 	<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
