--- a/translations/persona4/galeria.html
+++ b/translations/persona4/galeria.html
@@ -13,7 +13,7 @@
 	<meta property="og:image" content="http://glowtranslations.tk/images/metapersona4.jpg"/>
 	<title>GlowTranslations - Shin Megami Tensei: Persona 4 - Galería</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
-	<link rel="stylesheet" type="text/css" href="gallery.css">
+	<link rel="stylesheet" type="text/css" href="../../css/gallery.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png?v=E6jLbRYamd">
     <link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png?v=E6jLbRYamd">
     <link rel="icon" type="image/png" sizes="192x192" href="../../android-chrome-192x192.png">
@@ -25,7 +25,7 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="keywords" content="GlowTranslations, glowtranslations, Stella Glow, Rune Factory, Lord of Magna, persona 4, Traducciones, Scene, 3DS, PS2">
-	<meta name="description" content="Pagina oficial de Glow translations, traducciones FAN de juegos.">
+	<meta name="description" content="alería sobre la traducción de Shin Megami Tensei: Persona 4.">
 	<meta name="author" content="Glowtranslations">
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
