--- a/translations/runefactory4/progresos.html
+++ b/translations/runefactory4/progresos.html
@@ -9,7 +9,7 @@
 	gtag('config', 'UA-76928300-1');
 	</script>
 	<meta property="og:title" content="Glowtranslations - Rune Factory 4 - Progresos"/>
-	<meta property="og:description" content="Pagina oficial de Glow translations, progresos sobre la traducción de Rune Factory 4."/>
+	<meta property="og:description" content="Progresos sobre la traducción de Rune Factory 4."/>
 	<meta property="og:image" content="http://glowtranslations.tk/images/metarune.jpg"/>
 	<title>GlowTranslations - Rune Factory 4 - Progresos</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
@@ -24,7 +24,7 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="keywords" content="GlowTranslations, glowtranslations, Stella Glow, Rune Factory, Lord of Magna, persona 4, Traducciones, Scene, 3DS, PS2">
-	<meta name="description" content="Pagina oficial de Glow translations, traducciones FAN de juegos.">
+	<meta name="description" content="Progresos sobre la traducción de Rune Factory 4.">
 	<meta name="author" content="Glowtranslations">
 	<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
@@ -57,12 +57,6 @@ window.cookieconsent.initialise({
 		<div class="content-container">
 			<div class="content-title">Progresos</div>
 			<div class="content">
-				<b><u>¿Qué está traducido? </u></b><br>
-				Actualmente esta traducido: Interfaz, el equipo, los objetos, las localizaciones, las habilidades y magias runa <br><br>
-				<b><u>¿Qué falta por traducir? </u></b><br>
-				Actualmente, falta por traducir: La historia (Arco 1, Arco 2 y Arco 3), las conversaciones, los eventos y vídeos. <br><br>
-			    <b><u>¿Cómo puedo revisar exactamente lo que lleváis traducido? </b></u><br>
-				Muy fácil, en la tabla que se muestra abajo puedes consultar los avances de la traducción, lo iremos actualizando de vez en cuando. <br><br>
 				<table class='progress'>
 				<tr>
 				<td class='title'>Sección</td><td class='title'>Traducido</td><td class='title'>Corregido</td><td class='title'>Testeado</td>
@@ -70,8 +64,8 @@ window.cookieconsent.initialise({
 				<tr><td>Historia: Arco 1</td><td class='wip'>50%</td><td class='no'>No</td><td class='no'>No</td></tr>
 				<tr><td>Historia: Arco 2</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Historia: Arco 3</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Conversaciones</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Eventos</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Conversaciones</td><td class='wip'>5%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Eventos</td><td class='wip'>5%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Equipo</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Objetos</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Localizaciones</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
