Añadido las glownovedades 6

--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@ window.cookieconsent.initialise({
 		<div class="main-menu" id="main-menu"></div>
 		<div class="second-bar" id="second-bar"><a href="index.html"><div class="logo"></div></a></div>
 		<div class="content-container" style="width: 630px; float: left;">
+		<div class="content-title" style="width: 610px;">GlowNovedades #6: ¡Llegan el verano, las vacaciones y las novedades!</div>
+			<div class="content">
+				<img onload="this.style.opacity='1';" style="width: 570px; height: 320px;" src="articles/06-2018/GlowNovedades6-01/images/top.png" ><br>
+				<p>&iexcl;Buenas a todos! Por fin estamos en veranito y muchos ya disfrutamos de las vacaciones :D</p>
+				<p style="text-align:center"><img onload="this.style.opacity='1';" src="https://i.imgur.com/PCl8gH7.gif" /></p>
+				<p>&iquest;Qu&eacute; tal est&aacute;is? Tras publicar la traducci&oacute;n de <em>Lord Of Magna: Maiden Heaven</em>,&nbsp;hemos estado d&aacute;ndole duro a los ex&aacute;menes. Eso s&iacute;, en nuestros ratos libres nos hemos puesto a tope con nuestras traducciones e_e.</p>
+				<p style="text-align:center"><img onload="this.style.opacity='1';" src="https://i.imgur.com/4Q1Vzz6.png" /></p>
+				<p>Es por eso que vengo a comentaros....</p>
+				<center><a class="boton_readmore" href="https://tradusquare.es/entrada.php?GlowNovedades-6---Llegan-el-verano-las-vacaciones-y-las-novedades">Leer más</a></center>
+			</div>
 		<div class="content-title" style="width: 610px;">¡Liberamos la traducción de Lord Of Magna Maiden Heaven al español!</div>
 			<div class="content">
 				<img onload="this.style.opacity='1';" style="width: 570px; height: 320px;" src="articles/05-2018/LordOfMagnaesp-01/images/top.png" ><br>
@@ -91,16 +101,6 @@ window.cookieconsent.initialise({
 				Nuestros compañeros han trabajado muy duro para hacer una traducción de gran calidad, <b>basándose muchos textos en la versión...</b><br><br>
 				<center><a class="boton_readmore" href="https://tradusquare.es/entrada.php?GlowNovedades-4-Proyecto-secreto-testeo-de-lord-y-mas">Leer más</a></center>
 			</div>
-		<div class="content-title" style="width: 610px;">GlowNovedades #3 - ¡Feliz año nuevo!</div>
-			<div class="content">
-				<img onload="this.style.opacity='1';" style="width: 570px; height: 320px;" src="articles/12-2017/GlowNovedades3-31/images/top.png" ><br>
-				¡Estamos de vuelta! </b>
-				¡Las <b>GlowNovedades</b> de este mes vienen cargadas de sorpresas!<br><br>
-
-				En primer lugar, nuestra <b>más reciente revelación, la traducción de Persona 4,</b> avanza lentamente, pues estamos centrándonos en terminar Lord of Magna.<br>
-				Se están traduciendo las imágenes, definiciones, el compendium y demás, antes de comenzar con la historia...<br><br>
-				<center><a class="boton_readmore" href="articles/12-2017/GlowNovedades3-31/GlowNovedades-3.html">Leer más</a></center>
-			</div>
 		</div>
 			<div class="module" style="width: 260px;">
 			<div class="content-container">
@@ -108,6 +108,7 @@ window.cookieconsent.initialise({
 				<div class="content-title">Noticias</div>
 				</div>
 				<ul>
+					<li><a href="articles/06-2018/index.html">Junio 2018</a></li>
 					<li><a href="articles/05-2018/index.html">Mayo 2018</a></li>
 					<li><a href="articles/04-2018/index.html">Abril 2018</a></li>
 					<li><a href="articles/02-2018/index.html">Febrero 2018</a></li>
@@ -159,9 +160,9 @@ window.cookieconsent.initialise({
 				<div style="clear: both;"></div>
 				<div class="progress-title">SMT: Persona 4</div>
 					<div class="wrap">
-					<div class="progress-radial progress-5" style="background-color: #4f7cfe;">
+					<div class="progress-radial progress-10" style="background-color: #4f7cfe;">
  					 <div class="overlay"></div>
- 					 <div class="text-overlay" style="font-size: 30px;">7%</div>
+ 					 <div class="text-overlay" style="font-size: 30px;">10%</div>
 					</div>
 					</div>
 				<div style="clear: both;"></div>
