--- a/translations/persona4/progresos.html
+++ b/translations/persona4/progresos.html
@@ -57,12 +57,12 @@ window.cookieconsent.initialise({
 		<div class="content-container">
 			<div class="content-title">Progresos</div>
 			<div class="content">
-				<b><u>¿Qué está traducido? </u></b><br>
+				<!--<b><u>¿Qué está traducido? </u></b><br>
 				Actualmente esta traducido: Nada <br><br>
 				<b><u>¿Qué falta por traducir? </u></b><br>
 				Actualmente, falta por traducir: La historia, Entorno, mazmorras vínculos, objetos/equipo, las Personas y su descripción, habilidades, vídeos y interfaz. <br><br>
 			    <b><u>¿Cómo puedo revisar exactamente lo que lleváis traducido? </u></b><br>
-				Muy fácil, en la tabla que se muestra abajo puedes consultar los avances de la traducción, lo iremos actualizando de vez en cuando. <br><br>
+				Muy fácil, en la tabla que se muestra abajo puedes consultar los avances de la traducción, lo iremos actualizando de vez en cuando. <br><br>-->
 				<table class='progress'>
 				<tr>
 					<td class='title'>Sección</td><td class='title'>Traducido</td><td class='title'>Corregido</td><td class='title'>Testeado</td>
