fix lord of magna

--- a/translations/lordofmagna/miembros.html
+++ b/translations/lordofmagna/miembros.html
@@ -52,20 +52,20 @@ window.cookieconsent.initialise({
 </head>
 <body class="body-LOM participantes traducciones">
 	<div class="main-body">
-		 <div class="main-menu" id="main-menu"></div>
-		<div class="second-bar" id="second-bar"><a href="../../index.html"><div class="logo"></div></a></div>
-		<div class="content-container">
-			<div class="content-title">Miembros de la traducción</div>
+		 <div class="main-menu-translations" id="main-menu"></div>
+		<div class="second-bar" id="second-bar"></div>
+		<div class="content-container-translations">
+			<div class="content-title-post" style="background-image: url('imageheader/credits.jpg');"><a class="content-title-text"><div class="background-title-text"><div>Participaciones y menciones de la traducción</div></div></a></div>
 			<div class="content">
 				Aquí están todos aquellos que han llevndo un papel importante en la traducción de Lord of Magna: Maiden Heaven al español.
 				<div class="title"><h1>Líderes del proyecto</h1></div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Darkmet98</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Xppancho</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Xppancho.jpg" style="width: 100px; height: 100px;">
@@ -73,13 +73,13 @@ window.cookieconsent.initialise({
 				</div>
 				<div style="clear: both;"></div>
 				<div class="title"><h1>RomHacking</h1></div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Raugo</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Raugo.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Darkmet98</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
@@ -87,49 +87,49 @@ window.cookieconsent.initialise({
 				</div>
 				<div style="clear: both;"></div>
 				<div class="title"><h1>Traducción</h1></div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Darkmet98</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Xppancho</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Xppancho.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Lilia.~</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Lilia.~.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Sorium</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Sorium.jpeg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Erena</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Erena.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Hec17</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Hec17.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">ElaineWeasley</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Elaine.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Sonicus</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Sonicus.png" style="width: 100px; height: 100px;">
@@ -137,31 +137,31 @@ window.cookieconsent.initialise({
 				</div>
 				<div style="clear: both;"></div>
 				<div class="title"><h1>Corrección</h1></div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Sany</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Sany.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Jesa</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Jesa.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Azu</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Azu.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Erena</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Erena.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Sonicus</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Sonicus.png" style="width: 100px; height: 100px;">
@@ -169,7 +169,7 @@ window.cookieconsent.initialise({
 				</div>
 				<div style="clear: both;"></div>
 				<div class="title"><h1>Editores gráficos</h1></div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Darkmet98</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
@@ -177,25 +177,25 @@ window.cookieconsent.initialise({
 				</div>
                 <div style="clear: both;"></div>
 				<div class="title"><h1>Vídeos</h1></div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Darkmet98</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Sorium</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Sorium.jpeg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Xppancho</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Xppancho.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Sonicus</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Sonicus.png" style="width: 100px; height: 100px;">
@@ -203,31 +203,31 @@ window.cookieconsent.initialise({
 				</div>
 				<div style="clear: both;"></div>
 				<div class="title"><h1>Betatesters</h1></div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Xppancho</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Xppancho.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Darkmet98</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Eliden</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Eliden.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Sorium</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Sorium.jpeg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Sonicus</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Sonicus.png" style="width: 100px; height: 100px;">
@@ -235,14 +235,14 @@ window.cookieconsent.initialise({
 				</div>
 				<div style="clear: both;"></div>
 				<div class="title"><h1>Agradecimientos</h1></div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">Shiryu</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/shiryu.jpg" style="width: 100px; height: 100px;">
 					</div>
 					<div class="credits-desc">Por las sources del parcheador Windows.</div>
 				</div>
-				<div class="credits-container"> 
+				<div class="credits-container">
 					<div class="credits-name">TraduSquare</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/tradusquare.png" style="width: 100px; height: 100px;">
@@ -254,7 +254,7 @@ window.cookieconsent.initialise({
 		</div>
 		<div style="height:100px;"></div>
 		<div class="footer" id="footer"></div>
-		<script src="../../js/menus.js" onload="mainMenu(), lordofMagnaSubMenu(), footer()"></script>	
+		<script src="../../js/menus.js" onload="mainMenu(), lordofMagnaSubMenu(), footer()"></script>
 	</div>
 </body>
 </html>
