--- a/translations/lordofmagna/galeria.html
+++ b/translations/lordofmagna/galeria.html
@@ -13,7 +13,8 @@
 	<meta property="og:image" content="http://glowtranslations.tk/images/metalord.jpg"/>
 	<title>GlowTranslations - Lord of Magna: Maiden Heaven - Galería</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
-	<link rel="stylesheet" type="text/css" href="gallery.css">
+	<link rel="stylesheet" href="../../css/flickity.css" media="screen">
+	<script src="../../js/flickity.pkgd.min.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png?v=E6jLbRYamd">
     <link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png?v=E6jLbRYamd">
     <link rel="icon" type="image/png" sizes="192x192" href="../../android-chrome-192x192.png">
@@ -51,228 +52,27 @@ window.cookieconsent.initialise({
 </script>
 </head>
 <body class="body-LOM galeria traducciones">
-	<script>
-		function openModal() {
- 		 document.getElementById('myModal').style.display = "block";
-		}
-
-	function closeModal() {
- 	 document.getElementById('myModal').style.display = "none";
-	}
-
-	var slideIndex = 1;
-		showSlides(slideIndex);
-
-	function plusSlides(n) {
-	  showSlides(slideIndex += n);
-	}
-
-	function currentSlide(n) {
-	  showSlides(slideIndex = n);
-	}
-
-	function showSlides(n) {
-	  var i;
-	  var slides = document.getElementsByClassName("mySlides");
-	  var dots = document.getElementsByClassName("demo");
-	  var captionText = document.getElementById("caption");
-	  if (n > slides.length) {slideIndex = 1}
-	  if (n < 1) {slideIndex = slides.length}
- 	 for (i = 0; i < slides.length; i++) {
-	    slides[i].style.display = "none";
-	  }
-	  for (i = 0; i < dots.length; i++) {
-	    dots[i].className = dots[i].className.replace(" active", "");
-	  }
-	  slides[slideIndex-1].style.display = "block";
-	  dots[slideIndex-1].className += " active";
-	  captionText.innerHTML = dots[slideIndex-1].alt;
-	}
-	</script>
 	<div class="main-body">
-		 <div class="main-menu" id="main-menu"></div>
-		<div class="second-bar" id="second-bar"><a href="../../index.html"><div class="logo"></div></a></div>
-		<div class="content-container">
-			<div class="content-title">Galería</div>
+		 <div class="main-menu-translations" id="main-menu"></div>
+		<div class="second-bar" id="second-bar"></div>
+		<div class="content-container-translations">
+			<div class="content-title-post" style="background-image: url('imageheader/gallery.jpg');"><a class="content-title-text"><div class="background-title-text"><div>Galería</div></div></a></div>
 			<div class="content">
-				<div class="row">
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Dialogo-1.JPG" onclick="openModal();currentSlide(1)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Dialogo-2.JPG" onclick="openModal();currentSlide(2)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Dialogo-3.JPG" onclick="openModal();currentSlide(3)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Dialogo-4.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Nombres.JPG" onclick="openModal();currentSlide(5)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Combate-1.jpg" onclick="openModal();currentSlide(6)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Combate-2.jpg" onclick="openModal();currentSlide(7)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Eventos.jpg" onclick="openModal();currentSlide(8)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Localizacion.jpg" onclick="openModal();currentSlide(9)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Habilidades-1.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Habilidades-2.jpg" onclick="openModal();currentSlide(11)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Dialogo-5.jpg" onclick="openModal();currentSlide(12)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Estado.jpg" onclick="openModal();currentSlide(13)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/Objetos.jpg" onclick="openModal();currentSlide(14)" class="hover-shadow">
-  </div>
-</div>
-
-<div id="myModal" class="modal">
-  <span class="close cursor" onclick="closeModal()">&times;</span>
-  <div class="modal-content">
-
-    <div class="mySlides">
-      <div class="numbertext">1 / 14</div>
-        <img onload="this.style.opacity='1';" src="gallery/Dialogo-1.JPG" style="margin: auto;">
-    </div>
-
-    <div class="mySlides">
-      <div class="numbertext">2 / 14</div>
-        <img onload="this.style.opacity='1';" src="gallery/Dialogo-2.JPG" style="margin: auto;">
-    </div>
-
-    <div class="mySlides">
-      <div class="numbertext">3 / 14</div>
-        <img onload="this.style.opacity='1';" src="gallery/Dialogo-3.JPG" style="margin: auto;">
-    </div>
-
-    <div class="mySlides">
-      <div class="numbertext">4 / 14</div>
-        <img onload="this.style.opacity='1';" src="gallery/Dialogo-4.jpg" style="margin: auto;">
-    </div>
-    <div class="mySlides">
-      <div class="numbertext">5 / 14</div>
-        <img onload="this.style.opacity='1';" src="gallery/Nombres.JPG" style="margin: auto;">
-    </div>
-
-    <div class="mySlides">
-      <div class="numbertext">6 / 14</div>
-        <img onload="this.style.opacity='1';" src="gallery/Combate-1.jpg" style="margin: auto;">
-    </div>
-
-    <div class="mySlides">
-      <div class="numbertext">7 / 14</div>
-        <img onload="this.style.opacity='1';" src="gallery/Combate-2.jpg" style="margin: auto;">
-    </div>
-    <div class="mySlides">
-      <div class="numbertext">8 / 14</div>
-        <img onload="this.style.opacity='1';" src="gallery/Eventos.jpg" style="margin: auto;">
-    </div>
-
-    <div class="mySlides">
-      <div class="numbertext">9 / 14</div>
-        <img onload="this.style.opacity='1';" src="gallery/Localizacion.jpg" style="margin: auto;">
-    </div>
-
-    <div class="mySlides">
-      <div class="numbertext">10 / 14</div>
-        <img onload="this.style.opacity='1';" src="gallery/Habilidades-1.jpg" style="margin: auto;">
-    </div>
-	
-	<div class="mySlides">
-      <div class="numbertext">11 / 14</div>
-        <img onload="this.style.opacity='1';" src="gallery/Habilidades-2.jpg" style="margin: auto;">
-    </div>
-	
-	<div class="mySlides">
-      <div class="numbertext">12 / 14</div>
-        <img onload="this.style.opacity='1';" src="gallery/Dialogo-5.jpg" style="margin: auto;">
-    </div>
-	
-	<div class="mySlides">
-      <div class="numbertext">13 / 14</div>
-        <img onload="this.style.opacity='1';" src="gallery/Estado.jpg" style="margin: auto;">
-    </div>
-	
-	<div class="mySlides">
-      <div class="numbertext">14 / 14</div>
-        <img onload="this.style.opacity='1';" src="gallery/Objetos.jpg" style="margin: auto;">
-    </div>
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-    <div class="caption-container">
-      <p id="caption"></p>
-    </div>
-		<div class="gallery-thumbs">
-    <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-1.JPG" onclick="currentSlide(1)" alt="Conversaciones">
-    </div>
-
-    <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-2.JPG" onclick="currentSlide(2)" alt="Conversaciones">
-    </div>
-
-    <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-3.JPG" onclick="currentSlide(3)" alt="Conversaciones">
-    </div>
-
-    <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-4.jpg" onclick="currentSlide(4)" alt="Conversaciones">
-    </div>
-    <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Nombres.JPG" onclick="currentSlide(5)" alt="Pantalla de inicio">
-    </div>
-
-    <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Combate-1.jpg" onclick="currentSlide(6)" alt="Combate">
-    </div>
-
-    <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Combate-2.jpg" onclick="currentSlide(7)" alt="Combate">
-    </div>
-    <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Eventos.jpg" onclick="currentSlide(8)" alt="Eventos">
-    </div>
-
-    <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Localizacion.jpg" onclick="currentSlide(9)" alt="Localización">
-    </div>
-
-    <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Habilidades-1.jpg" onclick="currentSlide(10)" alt="Habilidades">
-    </div>
-	
-	<div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Habilidades-2.jpg" onclick="currentSlide(11)" alt="Habilidades">
-    </div>
-	
-	<div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-5.jpg" onclick="currentSlide(12)" alt="Conversaciones">
-    </div>
-	
-	<div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Estado.jpg" onclick="currentSlide(13)" alt="Estado">
-    </div>
-	
-	<div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Objetos.jpg" onclick="currentSlide(14)" alt="Objetos">
-    </div>
-    </div>
-  </div>
+				<div class="carousel"
+	data-flickity='{ "imagesLoaded": true, "adaptiveHeight": true, "autoPlay": true, "percentPosition": false }' style="margin-bottom: 5%">
+	<img onload="this.style.opacity='1';" src="gallery/1.jpg" />
+	<img onload="this.style.opacity='1';" src="gallery/2.jpg" />
+	<img onload="this.style.opacity='1';" src="gallery/3.jpg" />
+	<img onload="this.style.opacity='1';" src="gallery/4.jpg" />
+	<img onload="this.style.opacity='1';" src="gallery/5.jpg" />
+	<img onload="this.style.opacity='1';" src="gallery/6.jpg" />
+	<img onload="this.style.opacity='1';" src="gallery/7.jpg" />
+	<img onload="this.style.opacity='1';" src="gallery/8.jpg" />
+	<img onload="this.style.opacity='1';" src="gallery/9.jpg" />
+	<img onload="this.style.opacity='1';" src="gallery/10.jpg" />
+	<img onload="this.style.opacity='1';" src="gallery/11.jpg" />
+	<img onload="this.style.opacity='1';" src="gallery/12.jpg" />
+	<img onload="this.style.opacity='1';" src="gallery/13.jpg" />
 </div>
 <center><iframe width="890" height="512" src="https://www.youtube.com/embed/FIDzjw0g5Ko?rel=0" frameborder="0" allowfullscreen></iframe><br><br>
 <iframe width="890" height="512" src="https://www.youtube.com/embed/BzjBsxbmY3U?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center>
