--- a/translations/lordofmagna/informacion.html
+++ b/translations/lordofmagna/informacion.html
@@ -52,10 +52,10 @@ window.cookieconsent.initialise({
 <body class="body-LOM informacion traducciones">
 	<div class="main-body">
 		<script src="../../menus.js"></script>
-		 <div class="main-menu" id="main-menu"></div>
-		<div class="second-bar" id="second-bar"><a href="../../index.html"><div class="logo"></div></a></div>
-		<div class="content-container">
-			<div class="content-title">¡Lord of Magna: Maiden Heaven en español!</div>
+		 <div class="main-menu-translations" id="main-menu"></div>
+		<div class="second-bar" id="second-bar"></div>
+		<div class="content-container-translations">
+			<div class="content-title-post" style="background-image: url('imageheader/info.jpg');"><a class="content-title-text"><div class="background-title-text"><div>¡Lord of Magna: Maiden Heaven en español!</div></div></a></div>
 			<div class="content">
     <img onload="this.style.opacity='1';" src="../../images/lord-info.png" style="float: right; margin-right: -30px;">
     Habiendo comenzado ya con la traducción de Rune Factory 4, nos ponemos manos a la obra con otro juego, que es más corto, pero igual de entretenido:  <br>
