Arreglados todos los errores, se ha mejorado el sistema de artículos y optimizada la web.

--- a/contactar.html
+++ b/contactar.html
@@ -63,7 +63,7 @@
                 Si quieres compartir algo con nosotros, puedes hacerlo en twitter o en el hilo oficial de GlowTranslations en ElOtroLado.net.
             </div>
         </div>
-        <div class="module" style="width: 290px; margin-top: 20px; margin-left: 40px;">
+        <div class="module" style="margin-top: 20px; margin-left: 20%;">
             <div class="content-container-widgets" style="height: 120px;">
                 <div class="module-title-background" style="background-image: url('images/twitter-banner.jpg');">
                     <div class="content-title-widget">Twitter</div>
@@ -75,7 +75,7 @@
                 </p>
             </div>
         </div>
-        <div class="module" style="width: 290px; margin-top: 20px; margin-left: 40px;">
+            <div class="module" style="margin-top: 20px; margin-left: 20%;">
             <div class="content-container-widgets" style="height: 120px;">
                 <div class="module-title-background" style="background-image: url('images/eol-banner.jpg');">
                     <div class="content-title-widget">Foro</div>
@@ -83,15 +83,7 @@
                 <p style="font-size: 14px;">Visita el hilo oficial de la traducción de <a href="http://www.elotrolado.net/hilo_hilo-oficial-traduccion-del-stella-glow-al-espanol_2150612">Stella Glow</a>, de <a href="https://www.elotrolado.net/hilo_hilo-oficial-traduccion-de-rune-factory-4-al-espanol_2226213">Rune Factory 4</a> o <a href="https://www.elotrolado.net/hilo_hilo-oficial-traduccion-de-lord-of-magna-maiden-heaven-al-espanol_2229462">Lord of Magna: Maiden Heaven</a> para saber más y/o comentar o preguntar cualquier cosa. <br />¡Comenta en EOL!</p>
             </div>
         </div>
-                <div class="module" style="width: 290px; margin-top: 20px; margin-left: 40px;">
-            <div class="content-container-widgets" style="height: 120px;">
-                <div class="module-title-background" style="background-image: url('images/eol-banner.jpg');">
-                    <div class="content-title-widget">Foro</div>
-                </div>
-                <p style="font-size: 14px;">Visita el hilo oficial de la traducción de <a href="http://www.elotrolado.net/hilo_hilo-oficial-traduccion-del-stella-glow-al-espanol_2150612">Stella Glow</a>, de <a href="https://www.elotrolado.net/hilo_hilo-oficial-traduccion-de-rune-factory-4-al-espanol_2226213">Rune Factory 4</a> o <a href="https://www.elotrolado.net/hilo_hilo-oficial-traduccion-de-lord-of-magna-maiden-heaven-al-espanol_2229462">Lord of Magna: Maiden Heaven</a> para saber más y/o comentar o preguntar cualquier cosa. <br />¡Comenta en EOL!</p>
-            </div>
-        </div>
-        <div class="module" style="width: 290px; margin-top: 20px;">
+        <div class="module" style="margin-top: 20px;">
             <div class="content-container-widgets" style="height: 120px;">
                 <div class="module-title-background" style="background-image: url('images/email-banner.jpg');">
                     <div class="content-title-widget">eMail</div>
