--- a/miembros.html
+++ b/miembros.html
@@ -108,6 +108,11 @@ window.cookieconsent.initialise({
 					<div class="member-name" style="background-color: #047364;">Sonicus</div>
 					<div class="member-desc">Traductor<br>Corrector</div>
 				</div>
+				<div class="member-container"style="background: linear-gradient(to right, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);">
+					<div class="member-avatar" style="background-image: url('images/avatars/Mistergamer.jpg')"></div>
+					<div class="member-name" style="background-color: #00708f;">Mistergamer</div>
+					<div class="member-desc">Traductor</div>
+				</div>
 				<div style="clear: both;"></div>
 			</div>
 		</div>
