--- a/translations/persona4/progresos.html
+++ b/translations/persona4/progresos.html
@@ -96,7 +96,7 @@ window.cookieconsent.initialise({
 						</div>
 					<a>Gráficos</a>
 							<div class="progress" style="height:40px; margin-bottom: 3%;">
-							<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:80%">80%</div>
+							<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" style="width:100%">100%</div>
 						</div>
    </div>
 		</div>
