--- a/translations/runefactory4/miembros.html
+++ b/translations/runefactory4/miembros.html
@@ -87,12 +87,6 @@ window.cookieconsent.initialise({
 					</div>
 				</div>
 				<div class="credits-container">
-					<div class="credits-name">Hec17</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Hec17.jpg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
-				<div class="credits-container">
 					<div class="credits-name">Jesa</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Jesa.jpg" style="width: 100px; height: 100px;">
@@ -105,12 +99,6 @@ window.cookieconsent.initialise({
 					</div>
 				</div>
 				<div class="credits-container">
-					<div class="credits-name">Vanille</div>
-					<div class="credits-avatar">
-						<img onload="this.style.opacity='1';" src="../../images/avatars/Vanille.jpg" style="width: 100px; height: 100px;">
-					</div>
-				</div>
-				<div class="credits-container">
 					<div class="credits-name">Azu</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Azu.jpg" style="width: 100px; height: 100px;">
@@ -120,6 +108,12 @@ window.cookieconsent.initialise({
 					<div class="credits-name">Nex</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/nex.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container">
+					<div class="credits-name">Roli300</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/roli.png" style="width: 100px; height: 100px;">
 					</div>
 				</div>
 				<div style="clear: both;"></div>
@@ -154,6 +148,20 @@ window.cookieconsent.initialise({
 					<div class="credits-name">Darkmet98</div>
 					<div class="credits-avatar">
 						<img onload="this.style.opacity='1';" src="../../images/avatars/Darkmet.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div style="clear: both;"></div>
+				<div class="title"><h1>Inactivos</h1></div>
+				<div class="credits-container">
+					<div class="credits-name">Hec17</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Hec17.jpg" style="width: 100px; height: 100px;">
+					</div>
+				</div>
+				<div class="credits-container">
+					<div class="credits-name">Vanille</div>
+					<div class="credits-avatar">
+						<img onload="this.style.opacity='1';" src="../../images/avatars/Vanille.jpg" style="width: 100px; height: 100px;">
 					</div>
 				</div>
 				<div style="clear: both;"></div>
