Activar ssl en toda la web

--- a/faq.html
+++ b/faq.html
@@ -10,7 +10,7 @@
 	</script>
 	<meta property="og:title" content="Glowtranslations - FAQ"/>
 	<meta property="og:description" content="FAQ de GlowTranslations."/>
-	<meta property="og:image" content="http://glowtranslations.tk/images/metaindex.png"/>
+	<meta property="og:image" content="https://glowtranslations.tk/images/metaindex.png"/>
 	<title>GlowTranslations - FAQ</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/progress.css">
