--- a/translations/lordofmagna/descargas.html
+++ b/translations/lordofmagna/descargas.html
@@ -10,7 +10,7 @@
 	</script>
 	<meta property="og:title" content="Glowtranslations - Lord of Magna: Maiden Heaven - Descargas"/>
 	<meta property="og:description" content="Descargas de la traducción de Lord of Magna: Maiden Heaven."/>
-	<meta property="og:image" content="http://glowtranslations.tk/images/metalord.jpg"/>
+	<meta property="og:image" content="https://glowtranslations.tk/images/metalord.jpg"/>
 	<title>GlowTranslations - Lord of Magna: Maiden Heaven - Descargas</title>
 	<link rel="stylesheet" type="text/css" href="../../css/downloads.css">
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
