--- a/translations/lordofmagna/galeria.html
+++ b/translations/lordofmagna/galeria.html
@@ -10,7 +10,7 @@
 	</script>
 	<meta property="og:title" content="Glowtranslations - Lord of Magna: Maiden Heaven - Galería"/>
 	<meta property="og:description" content="Galería sobre la traducción de Lord of Magna: Maiden Heaven."/>
-	<meta property="og:image" content="http://glowtranslations.tk/images/metalord.jpg"/>
+	<meta property="og:image" content="https://glowtranslations.tk/images/metalord.jpg"/>
 	<title>GlowTranslations - Lord of Magna: Maiden Heaven - Galería</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
 	<link rel="stylesheet" href="../../css/flickity.css" media="screen">
