--- a/translations/persona4/miembros.html
+++ b/translations/persona4/miembros.html
@@ -10,7 +10,7 @@
 	</script>
 	<meta property="og:title" content="Glowtranslations - Shin Megami Tensei: Persona 4 - Miembros"/>
 	<meta property="og:description" content="Miembros de la traducción de Shin Megami Tensei: Persona 4."/>
-	<meta property="og:image" content="http://glowtranslations.tk/images/metapersona4.jpg"/>
+	<meta property="og:image" content="https://glowtranslations.tk/images/metapersona4.jpg"/>
 	<title>GlowTranslations - Shin Megami Tensei: Persona 4 - Miembros</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png?v=E6jLbRYamd">
