--- a/translations/runefactory4/galeria.html
+++ b/translations/runefactory4/galeria.html
@@ -10,7 +10,7 @@
 	</script>
 	<meta property="og:title" content="Glowtranslations - Rune Factory 4 - Galería"/>
 	<meta property="og:description" content="Galería sobre la traducción de Rune Factory 4."/>
-	<meta property="og:image" content="http://glowtranslations.tk/images/metarune.jpg"/>
+	<meta property="og:image" content="https://glowtranslations.tk/images/metarune.jpg"/>
 	<title>GlowTranslations - Rune Factory 4 - Galería</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
 	<link rel="stylesheet" href="../../css/flickity.css" media="screen">
