--- a/translations/stellaglow/creditos.html
+++ b/translations/stellaglow/creditos.html
@@ -10,7 +10,7 @@
 	</script>
 	<meta property="og:title" content="Glowtranslations - Stella Glow - Créditos"/>
 	<meta property="og:description" content="Créditos sobre la traducción de Stella Glow."/>
-	<meta property="og:image" content="http://glowtranslations.tk/images/metastella.jpg"/>
+	<meta property="og:image" content="https://glowtranslations.tk/images/metastella.jpg"/>
 	<title>GlowTranslations - Stella Glow - Créditos</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png?v=E6jLbRYamd">
