--- a/translations/stellaglow/descargas.html
+++ b/translations/stellaglow/descargas.html
@@ -10,7 +10,7 @@
 	</script>
 	<meta property="og:title" content="Glowtranslations - Stella Glow - Descargas"/>
 	<meta property="og:description" content="Descargas de la traducción de Stella Glow."/>
-	<meta property="og:image" content="http://glowtranslations.tk/images/metastella.jpg"/>
+	<meta property="og:image" content="https://glowtranslations.tk/images/metastella.jpg"/>
 	<title>GlowTranslations - Stella Glow - Descargas</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../../css/downloads.css">
