--- a/contactar.html
+++ b/contactar.html
@@ -10,7 +10,7 @@
     </script>
     <meta property="og:title" content="Glowtranslations - Contacto" />
     <meta property="og:description" content="Contacta con GlowTranslations." />
-    <meta property="og:image" content="http://glowtranslations.tk/images/metaindex.png" />
+    <meta property="og:image" content="https://glowtranslations.tk/images/metaindex.png" />
     <title>GlowTranslations - Contacto</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=E6jLbRYamd?v=E6jLbRYamd">
