--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </script>
     <meta property="og:title" content="Glowtranslations" />
     <meta property="og:description" content="Pagina oficial de Glow translations, traducciones FAN de juegos." />
-    <meta property="og:image" content="http://glowtranslations.tk/images/metaindex.png" />
+    <meta property="og:image" content="https://glowtranslations.tk/images/metaindex.png" />
     <title>GlowTranslations</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/progress.css">
