--- a/translations/lordofmagna/informacion.html
+++ b/translations/lordofmagna/informacion.html
@@ -10,7 +10,7 @@
 	</script>
 	<meta property="og:title" content="Glowtranslations - Lord of Magna: Maiden Heaven - Información"/>
 	<meta property="og:description" content="Información sobre la traducción de Lord of Magna: Maiden Heaven."/>
-	<meta property="og:image" content="http://glowtranslations.tk/images/metalord.jpg"/>
+	<meta property="og:image" content="https://glowtranslations.tk/images/metalord.jpg"/>
 	<title>GlowTranslations - Lord of Magna: Maiden Heaven - Información</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png?v=E6jLbRYamd">
