--- a/translations/persona4/galeria.html
+++ b/translations/persona4/galeria.html
@@ -10,7 +10,7 @@
 	</script>
 	<meta property="og:title" content="Glowtranslations - Shin Megami Tensei: Persona 4 - Galería"/>
 	<meta property="og:description" content="Galería sobre la traducción de Shin Megami Tensei: Persona 4."/>
-	<meta property="og:image" content="http://glowtranslations.tk/images/metapersona4.jpg"/>
+	<meta property="og:image" content="https://glowtranslations.tk/images/metapersona4.jpg"/>
 	<title>GlowTranslations - Shin Megami Tensei: Persona 4 - Galería</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
 	<link rel="stylesheet" href="../../css/flickity.css" media="screen">
