--- a/translations/runefactory4/informacion.html
+++ b/translations/runefactory4/informacion.html
@@ -10,7 +10,7 @@
 	</script>
 	<meta property="og:title" content="Glowtranslations - Rune Factory 4 - Información"/>
 	<meta property="og:description" content="Información sobre la traducción de Rune Factory 4."/>
-	<meta property="og:image" content="http://glowtranslations.tk/images/metarune.jpg"/>
+	<meta property="og:image" content="https://glowtranslations.tk/images/metarune.jpg"/>
 	<title>GlowTranslations - Rune Factory 4 - Información</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png?v=E6jLbRYamd">
