--- a/translations/stellaglow/galeria.html
+++ b/translations/stellaglow/galeria.html
@@ -10,7 +10,7 @@
 	</script>
 	<meta property="og:title" content="Glowtranslations - Stella Glow - Galería"/>
 	<meta property="og:description" content="Galería sobre la traducción de Stella Glow."/>
-	<meta property="og:image" content="http://glowtranslations.tk/images/metastella.jpg"/>
+	<meta property="og:image" content="https://glowtranslations.tk/images/metastella.jpg"/>
 	<title>GlowTranslations - Stella Glow - Galería</title>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
 	<link rel="stylesheet" href="../../css/flickity.css" media="screen">
