Fix imagen imgur

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="content">
                 <p>&iexcl;Buenas a todos! Por fin estamos en veranito y muchos ya disfrutamos de las vacaciones :D</p>
                 <p>&iquest;Qu&eacute; tal est&aacute;is? Tras publicar la traducci&oacute;n de <em>Lord Of Magna: Maiden Heaven</em>,&nbsp;hemos estado d&aacute;ndole duro a los ex&aacute;menes. Eso s&iacute;, en nuestros ratos libres nos hemos puesto a tope con nuestras traducciones e_e.</p>
-                <p style="text-align:center"><img onload="this.style.opacity='1';" style="width=100%; height=100%" src="http://i.imgur.com/4Q1Vzz6.png" /></p>
+                <p style="text-align:center"><img onload="this.style.opacity='1';" style="width=100%; height=100%" src="https://i.imgur.com/4Q1Vzz6.png" /></p>
                 <p>Es por eso que vengo a comentaros....</p>
                 <center>
                     <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?GlowNovedades-6---Llegan-el-verano-las-vacaciones-y-las-novedades">Leer en TraduSquare</a>
