--- a/index.html
+++ b/index.html
@@ -56,8 +56,21 @@
         <div class="main-menu" id="main-menu"></div>
         <div class="second-bar" id="second-bar"></div>
         <div class="content-container">
+            <div class="content-title" style="background-image: url('articles/10-2018/glownovedades7_truco_o_novedades-31/images/top.jpg');">
+            <a class="content-title-text"><div class="background-title-text"><div>GlowNovedades #7: ¡Truco o Novedades!</div></div></a>
+            </div>
+            <div class="content">
+                ¡Muy buenas a todos! ¿Cómo os lo estáis pasando este Halloween? ¿A alguien se le ha ocurrido disfrazarse de algún personaje de Stella Glow, como Hilda?<br>
+				¿O de uno de Rune Factory 4, como Dolce? Si fuera así, escríbenos un tweet para ver el resultado :D<br><br>
+				Pero bueno, vamos al lío, que venimos cargaditos de novedades en estas GlowNovedades 7 :D<br>
+				<p style="text-align:center"><img onload="this.style.opacity='1';" style="width=100%; height=100%" src="https://glowtranslations.tk/articles/10-2018/glownovedades7_truco_o_novedades-31/images/vamos.png" /></p>
+                <center>
+                    <a class="boton_readmore" href="articles/10-2018/glownovedades7_truco_o_novedades-31/glownovedades7_truco_o_novedades.html">Leer en GlowTranslations</a>
+                    <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?GlowNovedades-7-Truco-o-Novedades">Leer en TraduSquare</a>
+                </center>
+            </div>
             <div class="content-title" style="background-image: url('articles/09-2018/avancesrune-04/images/top.jpg');">
-                <a class="content-title-text"><div class="background-title-text"><div>¡El periplo de Frey y Lest continúa! ¡Avances de Rune Factory 4!</div></div></a>
+            <a class="content-title-text"><div class="background-title-text"><div>¡El periplo de Frey y Lest continúa! ¡Avances de Rune Factory 4!</div></div></a>
             </div>
             <div class="content">
                 Buenas a todos! Ya casi ha acabado el verano, por desgracia, pero no todo son malas noticias, ¡porque os mostramos los avances de la traducción de Rune Factory 4!<br><br>
@@ -65,7 +78,7 @@
                 También, como comentamos en Twitter, actualmente se está trabajando en la versión 3.0 de la web. La web seguirá funcional, pero...<br><br>
                 <center>
                     <a class="boton_readmore" href="articles/09-2018/avancesrune-04/avances-rune-factory4.html">Leer en GlowTranslations</a>
-                    <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?GlowNovedades-6---Llegan-el-verano-las-vacaciones-y-las-novedades">Leer en TraduSquare</a>
+                    <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?GlowTranslations-El-periplo-de-Frey-y-Lest-continua-Avances-de-Rune-Factory-4">Leer en TraduSquare</a>
                 </center>
             </div>
             <div class="content-title" style="background-image: url('articles/06-2018/GlowNovedades6-01/images/top.jpg');">
@@ -97,15 +110,6 @@
                 Ha pasado mucho tiempo la verdad, desde que originalmente nos juntamos un grupito en skype para traducir un vídeo juego llamado Stella Glow y estábamos solo comentado los avances...<br><br>
                 <center>
                     <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?GlowNovedades-5-Avances-de-todos-nuestros-proyectos">Leer en TraduSquare</a>
-                </center>
-            </div>
-            <div class="content-title" style="background-image: url('articles/02-2018/traduccionmegamanstarforce3-28/images/top.png');"><a class="content-title-text"><div class="background-title-text"><div>¡Anunciamos la traducción de Megaman Starforce 3!</div></div></a></div>
-            <div class="content">
-                Después de <b>A Hat in Time</b>, se viene el que es el segundo proyecto nacido de la iniciativa <b><u>TraduSquare</u></b>.<br><br>
-                Así, dos equipos pertenecientes a <b>esta bonita comunidad</b>, se han unido para llevar a cabo la traducción de <b>Megaman Starforce 3</b>, para Nintendo DS. Para quien no lo conozca, Megaman Starforce es una subsaga de Megaman, secuela "directa" (unos 200 años en el futuro) del famosísimo Megaman Battle Network.<br><br>
-                Si bien los dos primeros juegos de esta saga <b>vinieron traducidos de forma oficial en español</b>, el tercero quedó en el olvido, allá por el 2009, y, a pesar de haberse intentado realizar en varias ocasiones una traducción por fans, ninguna llegó a buen puerto...<br><br>
-                <center>
-                    <a class="boton_readtradu" href="https://tradusquare.es/entrada.php?Nuevo-Proyecto-Megaman-Starforce-3-DS">Leer en TraduSquare</a>
                 </center>
             </div>
         </div>
